# robot-fleet-management-system

./: CMakeLists.txt  dependencies.cmake
app/: CMakeLists.txt  ProgramMain.cpp
config_and_log/: config_file.txt
docs/contributions/: standupContributions-11-16.md  standupContributions-11-2.md
docs/contributions/sprint reviews/: SprintReview-11-30.md  SprintReview-11-9
docs/contributions/standups/: standupContributions-11-16.md  standupContributions-12-7.md
docs/design/: DESIGN.md  RobotManagerUseCase.puml  usecases.md
docs/design/class_diagram/: class_diagram.puml
docs/design/sequence_diagrams/: Fix_robot.puml  SequenceDiagrams.md  clean_room_seq_diag.puml  collect.puml  dignose_robot.puml  logger_seq_diagram.puml  recharge.puml  robot_status_query.puml  room_status.puml  sprintReview.md
docs/design/use_cases/: RobotManagerUseCase.puml  RobotUseCase.puml  usecases.md
docs/user-guide/: USER_GUIDE.md
include/hppfiles/: cleaningSystem.hpp  logger.hpp  mopper.hpp  robot.hpp  room.hpp  scrubber.hpp  system.hpp  vacuum.hpp
src/: cleaningSystem.cpp  logger.cpp  main.cpp  mopper.cpp  robot.cpp  room.cpp  scrubber.cpp  system.cpp  vacuum.cpp
tests/: CMakeLists.txt  cleanAccessory_test.cpp  clean_test.cpp  cleaningSystem_test.cpp  maintenance_test.cpp
